// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultContainer render:categories and projects 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center"
  >
    <div
      class="animate-spin h-10 w-10 border-4 rounded-full border-t-transparent"
    />
  </div>
</DocumentFragment>
`;

exports[`SearchResultContainer render:loading 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center"
    role="loadingSpinner"
  >
    <div
      class="animate-spin h-10 w-10 border-4 rounded-full border-t-transparent"
    />
  </div>
</DocumentFragment>
`;
